footer is no longer overlapped by bogus element, fixes #3698
git-svn-id: svn://develop.studip.de/studip/trunk@27613 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/public/assets/stylesheets/less/layouts.less
+++ b/public/assets/stylesheets/less/layouts.less
@@ -58,18 +58,14 @@
 }
 
 #layout_wrapper {
+    .clearfix;
     clear: both;
-    min-width: 800px; // 1024 breite ist minimum
+    min-width: 800px; // 800px breite ist minimum
     min-height: 100%;
     width: 100%;
     height: auto !important;
     height: 100%;
-    margin: 0 auto -25px; // the bottom margin is the negative value of the footer's height
-}
-
-#layout_push {
-    clear: both;
-    height: 25px; // must be the same height as #layout_footer
+    margin: 0 auto;
 }
 
 #layout_footer {
@@ -77,11 +73,10 @@
     border-top: 1px solid @brand-color-darker;
     clear: both;
     color: #fff;
-    height: 24px;
+    height: 25px;
     margin: 0;
     text-align: right;
 }
-
 
 #layout_wrapper {                // the main flex, dividing all elements into flexing rows
     .flex();
